--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
+  font-size: 10px;
 }
 
 a {
@@ -13,4 +14,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --black: #000000;
+  --white: #f4f4f2;
+  --dark-grey: #20372f;
+  --light-grey: #00b033;
 }
