--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,9 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font: normal 400 10px 'Pretendard';
   font-size: 10px;
+  color: #f4f4f2;
+  background-color: #20372f;
 }
 
 a {
@@ -16,8 +17,40 @@ a {
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/font/Pretendard-Light.woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/font/Pretendard-Regular.woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/font/Pretendard-Medium.woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/font/Pretendard-Bold.woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
-  --black: #000000;
+  --color-black: #000000;
   --white: #f4f4f2;
   --dark-grey: #20372f;
   --light-grey: #00b033;
