--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,18 @@
+:root {
+  --color-black: #000000;
+  --color-white: #f4f4f2;
+  --color-dark-grey: #20372f;
+  --color-light-grey: #00b033;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font: normal 400 10px 'Pretendard';
   font-size: 10px;
-  color: #f4f4f2;
-  background-color: #20372f;
+  color: var(--color-white);
+  background-color: var(--color-dark-grey);
 }
 
 a {
@@ -47,11 +54,4 @@ a {
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-}
-
-:root {
-  --color-black: #000000;
-  --white: #f4f4f2;
-  --dark-grey: #20372f;
-  --light-grey: #00b033;
 }
