✨ feat: 인증 플로우 틀 잡기

--- a/styles/san-detail.scss
+++ b/styles/san-detail.scss
@@ -74,6 +74,9 @@
   }
   .image-wrapper {
     padding: 22px 18px;
+    input {
+      display: none;
+    }
   }
   .button-wrapper {
     display: grid;
