[FEAT] 산 인증 로직의 UI 추가

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -22,6 +22,11 @@ $FONT_WEIGHT_LIGHT: 100;
   font-size: 13px;
 }
 
+.text-button {
+  font-weight: $FONT_WEIGHT_LIGHT;
+  font-size: 13px;
+}
+
 .menu {
   font-weight: $FONT_WEIGHT_MIDDLE;
   font-size: 45px;
