--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,8 @@
   --color-white: #f4f4f2;
   --color-dark-grey: #20372f;
   --color-light-grey: #00b033;
+  --color-gray-100: #b3b3b3;
+  --color-black-70: #000000ba;
 }
 
 html,
