--- a/styles/base/globals.scss
+++ b/styles/base/globals.scss
@@ -11,7 +11,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font: normal 400 10px 'Pretendard';
+  font: normal 400 10px Pretendard;
   font-size: 10px;
   color: var(--color-white);
   background-color: var(--color-dark-grey);
@@ -28,7 +28,7 @@ a {
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('../assets/font/Pretendard-Light.woff2');
+  src: url('../../assets/font/Pretendard-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -36,7 +36,7 @@ a {
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('../assets/font/Pretendard-Regular.woff2');
+  src: url('../../assets/font/Pretendard-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -44,7 +44,7 @@ a {
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('../assets/font/Pretendard-Medium.woff2');
+  src: url('../../assets/font/Pretendard-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -52,7 +52,7 @@ a {
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('../assets/font/Pretendard-Bold.woff2');
+  src: url('../../assets/font/Pretendard-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
