--- a/styles/base/reset.scss
+++ b/styles/base/reset.scss
@@ -83,7 +83,8 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: Pretendard;
+  font-style: normal;
   vertical-align: baseline;
 } /* HTML5 display-role reset for older browsers */
 article,
